@@ -5,9 +5,9 @@ author = Gregg Gajic
 author_email = gregg.gajic@gmail.com
 summary = Parses the output of the system ping command.
 description-file = README.rst
-home_page = https://github.com/gg/pingparser
+home_page = https://github.com/ssteinerx/pingparser
 project_url =
-  Source repository,https://github.com/gg/pingparser
+  Source repository,https://github.com/ssteinerx/pingparser
 license = UNLICENSE
 maintainer = Steve Steiner
 maintainer-email = ssteinerX@gmail.com
