@@ -3,5 +3,8 @@ June 21, 2017 -- ssteinerX
 WORK IN PROGRESS...
 
 * Add CHANGES.txt (this file)
+* Add TODO.txt
 * Remove Python 3.1, 3.2, and 3.3 from tests.  Versions are obsolete and are no longer supported.
-* Add travis.yml  
+* Add Travis support & badge in README.rst
+* Update GitHub page & maintainer info
+* 
